--- a/inventory-manager/views/layout.jade
+++ b/inventory-manager/views/layout.jade
@@ -4,4 +4,21 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    h1 Car Inventory 
+    .contentWrapper
+      div(class='navBar')
+        ul(class='links')
+          li
+            a(href='/catalog') Home 
+          li
+            a(href='/catalog/cars') Cars
+          li
+            a(href='/catalog/bodyTypes') BodyTypes
+          li
+            a(href='/catalog/models') Models
+          li
+            a(href='/catalog/years') Years
+          li
+            a(href='/catalog/makes') Make
+      block content
+        .content
