Update Remaining List Routes
Updated & created jade files for remaining routes: bodyType, make, model, year.
Updated database with data to show in views.

--- a/inventory-manager/public/stylesheets/style.css
+++ b/inventory-manager/public/stylesheets/style.css
@@ -37,18 +37,18 @@ a {
   grid-column: 2/3;
 }
 
-.carList {
+.contentList {
   padding: 0px 20px;
 }
 
-.carList li {
+.contentList li {
   border-bottom: 1px solid black;
 }
 
-.carList li p, .carlist div {
+.contentList li p, .contentList div {
   padding: 10px;
 }
 
-.carList div {
+.contentList div {
   display: flex;
 }
