--- a/inventory-manager/views/car_list.jade
+++ b/inventory-manager/views/car_list.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   .content
     h1= title
-    ul(class='carList')
+    ul(class='contentList')
       each car in car_list
         li
           h3 #{car.year} #{car.make} #{car.model}
