Update Controller's Detail Pages
Updated & connected exports.controller's detail according to relevant category.
Created view for each controller detail.
User can search & navigate for cars using url links shown in each view.
Changed bodyType in car.js schema to allow cars to have multiple bodytypes with an array.

--- a/inventory-manager/views/car_detail.jade
+++ b/inventory-manager/views/car_detail.jade
@@ -4,6 +4,10 @@ block content
   .content
     .detail   
         h1 #{car.year.year} #{car.make.name} #{car.model.name}
+        p Body types:&nbsp
+          each type, idx in car.bodyType
+            a(href=type.url) #{type.type}
+            | 
         div(style='display:flex; gap:20px; padding:10px')
           p Stock: #{car.stock}
           p Price: #{car.price}
