--- a/inventory-manager/views/catalog.jade
+++ b/inventory-manager/views/catalog.jade
@@ -4,5 +4,8 @@ block content
   .content
     h2= title
     ul 
-      each category in categories
-        li #{category} : #{category.length}
+      li Cars: #{carCount}
+      li Makes: #{makeCount}
+      li Models: #{modelCount}
+      li Years: #{yearCount}
+      li Body types: #{bodyTypeCount}
