--- a/inventory-manager/public/stylesheets/style.css
+++ b/inventory-manager/public/stylesheets/style.css
@@ -1,10 +1,10 @@
 body {
   font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
   background: linear-gradient(white, lightgray);
-  height: 100vh;
   display: flex;
   flex-direction: column;
   margin: 0;
+  min-height: 100vh;
 }
 body > h1:first-child {
   padding: 20px 100px;
