Add Delete Features to Controllers & Views
User can delete body type, make, model, & year only if there is not a car connected to the category.
Cars can delete without worry; they are independent.
Created file for each delete view.

--- a/inventory-manager/views/bodyType_detail.jade
+++ b/inventory-manager/views/bodyType_detail.jade
@@ -13,5 +13,6 @@ block content
                 a(href=car.url) #{car.make.name} #{car.model.name}
               p Released: #{car.year.year}
                 div Stock: #{car.stock}
-
-    
+    hr 
+    p   
+        a(href=bodyType_detail.url+'/delete') Delete body type
