--- a/inventory-manager/views/car_detail.jade
+++ b/inventory-manager/views/car_detail.jade
@@ -18,5 +18,6 @@ block content
           a(href=car.year.url) #{car.year.year}
         div See all  
           a(href=car.model.url) #{car.model.name} models
-
-    
+    hr 
+    p   
+        a(href=car.url+'/delete') Delete car
