--- a/inventory-manager/views/make_detail.jade
+++ b/inventory-manager/views/make_detail.jade
@@ -14,5 +14,7 @@ block content
                 a(href=car.url) #{car.make.name} #{car.model.name}
               p Released: #{car.year.year}
                 div Stock: #{car.stock}
-
+    hr 
+    p   
+        a(href=make_detail.url+'/delete') Delete make
     
