--- a/inventory-manager/views/model_detail.jade
+++ b/inventory-manager/views/model_detail.jade
@@ -13,5 +13,7 @@ block content
               p Released: 
                 b #{car.year.year}
                 div Stock: #{car.stock}
-
+    hr 
+    p   
+        a(href=model_detail.url+'/delete') Delete model
     
