--- a/inventory-manager/views/year_detail.jade
+++ b/inventory-manager/views/year_detail.jade
@@ -12,3 +12,6 @@ block content
                 a(href=car.url) #{car.make.name} #{car.model.name}
               p Released: #{car.year.year}
                 div Stock: #{car.stock}
+    hr 
+    p   
+        a(href=year.url+'/delete') Delete year
