Implement Car Update GET & POST Methods
User can update any features of a car.
BUG: Car form can update with no body types selected.

--- a/inventory-manager/views/car_detail.jade
+++ b/inventory-manager/views/car_detail.jade
@@ -20,4 +20,7 @@ block content
           a(href=car.model.url) #{car.model.name} models
     hr 
     p   
+        a(href=car.url+'/update') Update car          
+    hr 
+    p   
         a(href=car.url+'/delete') Delete car
