Update Remaining Middleware Functions For Updates

--- a/inventory-manager/views/bodyType_detail.jade
+++ b/inventory-manager/views/bodyType_detail.jade
@@ -15,4 +15,7 @@ block content
                 div Stock: #{car.stock}
     hr 
     p   
+        a(href=bodyType_detail.url+'/update') Update body type   
+    hr 
+    p   
         a(href=bodyType_detail.url+'/delete') Delete body type
