--- a/inventory-manager/views/bodyType_form.jade
+++ b/inventory-manager/views/bodyType_form.jade
@@ -3,7 +3,7 @@ extends layout
 block content 
   .form 
     h1=title 
-
+    h2=bodyType.type
     form(method='POST' action='')
       div
         label(for='bodyType') Type: 
