--- a/inventory-manager/views/make_detail.jade
+++ b/inventory-manager/views/make_detail.jade
@@ -16,5 +16,8 @@ block content
                 div Stock: #{car.stock}
     hr 
     p   
+        a(href=make_detail.url+'/update') Update make                
+    hr 
+    p   
         a(href=make_detail.url+'/delete') Delete make
     
