--- a/inventory-manager/views/model_detail.jade
+++ b/inventory-manager/views/model_detail.jade
@@ -15,5 +15,8 @@ block content
                 div Stock: #{car.stock}
     hr 
     p   
+        a(href=model_detail.url+'/update') Update model                
+    hr 
+    p   
         a(href=model_detail.url+'/delete') Delete model
     
