--- a/inventory-manager/views/catalog.jade
+++ b/inventory-manager/views/catalog.jade
@@ -2,10 +2,20 @@ extends layout
 
 block content
   .content
-    h2= title
-    ul 
-      li Cars: #{carCount}
-      li Makes: #{makeCount}
-      li Models: #{modelCount}
-      li Years: #{yearCount}
-      li Body types: #{bodyTypeCount}
+    h1=title
+    ul.homeList
+      li 
+        b Cars 
+        | #{carCount}
+      li 
+        b Makes 
+        | #{makeCount}
+      li 
+        b Models 
+        | #{modelCount}
+      li 
+        b Years 
+        | #{yearCount}
+      li 
+        b Body types 
+        | #{bodyTypeCount}
