--- a/inventory-manager/views/make_form.jade
+++ b/inventory-manager/views/make_form.jade
@@ -8,8 +8,10 @@ block content
       div
         label(for='name') Name: 
         input(type='text', placeholder='Honda, Toyota, etc.' name='name' value=(undefined===make ? '' : make.name))
+      div
         label(for='make') Year founded: 
         input(type='number', name='year' placeholder=2000 min=1 max=9999 value=(undefined===make ? '' : make.year_founded))
+      div  
         label(for='description') Description: 
         input(type='text', placeholder='Description here...' name='description' value=(undefined===make ? '' : make.description))
       button(type='submit') Submit 
